Update Lectures 2 and 3

--- a/Lecture2.ipynb
+++ b/Lecture2.ipynb
@@ -2456,6 +2456,11 @@
    },
    "source": [
     "## Matrix norms\n",
+    "\n",
+    "* Elementwise: based on looking at matrix as an elongated vector\n",
+    "* Shatten norms: based on singular values\n",
+    "* Vector norm induced: most common and introduced below\n",
+    "\n",
     "Defined to be the largest amount the linear transformation can stretch a vector:\n",
     "\n",
     "$$\\Vert A\\Vert  = \\max_{\\bs u \\ne 0}\\frac{\\Vert A\\bs u\\Vert }{\\Vert \\bs u\\Vert }$$\n",
