--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -13,7 +13,7 @@
     "Topics:\n",
     "\n",
     "* Least Square\n",
-    "* Eigenvalue and Eigenvector \n",
+    "* Eigenvalue Decomposition \n",
     "* QR Decomposition\n",
     "* Principal Component Analysis\n",
     "* Singular Value Decomposition\n",
@@ -105,8 +105,7 @@
     "\\end{eqnarray}$$\n",
     "\n",
     "* The solution is equivalent to linear regression, but the later requires stronger assumptions for forecasting.\n",
-    "* $X^+ = (X^TX)^{-1}X^T$ is also known as the psuedo inverse of $X$ because $X^+X = I$\n",
-    "  * note $XX^+$ is not even a valid matrix multiplication. "
+    "* $X^+ = (X^TX)^{-1}X^T$ is also known as the (left) psuedo inverse of $X$ because $X^+X = I$ "
    ]
   },
   {
@@ -149,7 +148,8 @@
     "\\end{eqnarray}$$\n",
     "\n",
     "* $W$ is a diagonal weighting matrix for the elements in $\\bs \\beta$, e.g. $W = I$ is often a good start\n",
-    "* $\\lambda$ is a scalar penalty rate"
+    "* $\\lambda$ is a scalar penalty rate\n",
+    "* Also referred to as Tikhonov regularization."
    ]
   },
   {
@@ -164,7 +164,7 @@
     "\n",
     "We draw many pairs of $x, y, z$ from the following linear model: \n",
     "\n",
-    "$$  y = 2x + 0.1z + 5 + \\epsilon $$\n",
+    "$$  y = 2x + 0.0001z + 5 + \\epsilon $$\n",
     "\n",
     "* $x, z$ are standard normal, $z$ represents an insignificant feature (or accidental correlation)\n",
     "* $\\epsilon$ is a standard normal noise\n",
@@ -180,7 +180,7 @@
     {
      "data": {
       "text/html": [
-       "<center><font size=4><table border=\"1\" class=\"dataframe\">\n",
+       "<center><font size=2><table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
@@ -193,17 +193,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Least square</th>\n",
-       "      <td>-1,044</td>\n",
-       "      <td>1,046</td>\n",
-       "      <td>4.987</td>\n",
-       "      <td>70.54</td>\n",
+       "      <td>-236.4</td>\n",
+       "      <td>238.4</td>\n",
+       "      <td>5.001</td>\n",
+       "      <td>70.33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Ridge regression $\\lambda=0.1$</th>\n",
-       "      <td>0.736</td>\n",
-       "      <td>1.25</td>\n",
-       "      <td>4.985</td>\n",
-       "      <td>70.92</td>\n",
+       "      <td>0.9415</td>\n",
+       "      <td>1.062</td>\n",
+       "      <td>5.001</td>\n",
+       "      <td>70.35</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table></font></center>"
@@ -222,7 +222,7 @@
     "n = 5000\n",
     "x = np.random.normal(size=n)\n",
     "z = np.random.normal(size=n)\n",
-    "y = 2*x + 5 + 0.1*z + np.random.normal(size=n)\n",
+    "y = 2*x + 5 + 0.0001*z + np.random.normal(size=n)\n",
     "\n",
     "xs = np.array([x, x + 0.0001*z, np.ones(len(x))]).T\n",
     "\n",
@@ -270,13 +270,13 @@
     "l(\\bs \\beta) = \\Vert X \\bs{\\beta - y} \\Vert_2^2 + \\lambda \\Vert W \\bs \\beta \\Vert_1\n",
     "$$\n",
     "\n",
-    "* Elasticnet: in between LASSO and Ridge\n",
+    "* Elastic-Net: in between LASSO and Ridge\n",
     "\n",
     "$$\n",
     "l(\\bs \\beta) = \\Vert X \\bs{\\beta - y} \\Vert_2^2 + \\lambda_1 \\Vert W \\bs \\beta \\Vert_1 + \\lambda_2 \\Vert W \\bs \\beta \\Vert_2^2\n",
     "$$\n",
     "\n",
-    "Both LASSO and Elasticnet are equivalent to support vector machine (SVM)."
+    "Both LASSO and Elastic-Net are equivalent to support vector machine (SVM)."
    ]
   },
   {
@@ -287,9 +287,11 @@
     }
    },
    "source": [
-    "# Eigenvalues and Eigenvectors\n",
+    "# Eigenvalue Decomposition\n",
     "\n",
-    "eigen-: characteristic, origin: German"
+    "eigen-: characteristic, origin: German\n",
+    "\n",
+    "aka: spectral decomposition"
    ]
   },
   {
@@ -302,35 +304,13 @@
    "source": [
     "## Definitions\n",
     "\n",
-    "For a square matrix $A$ of size $n \\times n$, if there exists a vector $\\bs {v \\ne 0}$ and a scalar $\\lambda \\ne 0$ so that:\n",
+    "For a square matrix $A$ of size $n \\times n$, if there exists a vector $\\bs {v \\ne 0}$ and a scalar $\\lambda $ so that:\n",
     "\n",
     "$$ A \\bs v = \\lambda \\bs v $$\n",
     "\n",
     "* $\\bs v$ is an eigenvector,  $\\lambda$ is the corresponding eigenvalue\n",
     "* $A$ only changes $\\bs v$'s magnitude, but not direction\n",
     "* $\\lambda$ can be complex even for real $A$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "## Eigen vector/value conventions\n",
-    "\n",
-    "\n",
-    "$$ A \\bs v = \\lambda \\bs v $$\n",
-    "\n",
-    "Eigenvectors are usually specified as unit L2 vectors of $\\Vert \\bs v \\Vert_2^2 = \\bs v^T \\bs v = 1$. \n",
-    "  * $\\bs v$ and $- \\bs v$ are equivalent unit eigenvectors\n",
-    "  \n",
-    "Eigenvalues are named in descending order: $\\lambda_1 \\ge \\lambda_2 \\ge ... \\ge \\lambda_n $ \n",
-    "* their corresponding eigen vectors are $\\bs {v_1, v_2, ..., v_n}$ \n",
-    " \n",
-    "Can eigenvalues be negative?"
    ]
   },
   {
@@ -348,9 +328,9 @@
     "\n",
     "It has non-zero solution if and only if:\n",
     "\n",
-    "$$ \\det(A - \\lambda I) = 0$$ \n",
+    "$$ p(\\lambda) = \\det(A - \\lambda I) = 0$$ \n",
     "\n",
-    "a polynomial equation of degree $n$."
+    "where $p(\\lambda)$ is a polynomial of degree $n$."
    ]
   },
   {
@@ -361,8 +341,7 @@
     }
    },
    "source": [
-    "## Properties of eigenvalues\n",
-    "\n",
+    "## Properties of eigen value/vector\n",
     "For matrix $A$ of size $n \\times n$:\n",
     "* there can be $n$ distinct eigenvalues at most\n",
     "* eigenvalues can be negative or complex\n",
@@ -370,7 +349,10 @@
     "* $\\sum_i\\lambda_i = \\text{tr}(A)$\n",
     "\n",
     "It is difficult to solve the characteristic function for $\\lambda_i$, especially for large $n$.\n",
-    "* But once we have eigenvalues, it is easy to find corresponding eigenvectors."
+    "* But once we have eigenvalues, it is easy to find corresponding eigenvectors.\n",
+    "\n",
+    "Eigenvectors are usually specified as unit L2 vectors of $\\Vert \\bs v \\Vert_2^2 = \\bs v^T \\bs v = 1$. \n",
+    "  * $\\bs v$ and $- \\bs v$ are equivalent unit eigenvectors"
    ]
   },
   {
@@ -565,29 +547,28 @@
     }
    },
    "source": [
-    "$$\n",
+    "\n",
+    "$$\\overbrace{\\pmatrix{\n",
+    " x & x & x & x \\\\  \n",
+    " x & x & x & x \\\\  \n",
+    " x & x & x & x \\\\  \n",
+    " x & x & x & x \\\\  \n",
+    " x & x & x & x \\\\  \n",
+    " x & x & x & x \n",
+    "}}^A =\n",
     "\\overbrace{\\pmatrix{\n",
-    "* & * & * & * \\\\  \n",
-    "* & * & * & * \\\\  \n",
-    "* & * & * & * \\\\  \n",
-    "* & * & * & * \\\\  \n",
-    "* & * & * & * \\\\  \n",
-    "* & * & * & * \n",
-    "}}^A = \n",
+    "x & x & x & x & x & x \\\\\n",
+    "x & x & x & x & x & x \\\\\n",
+    "x & x & x & x & x & x \\\\\n",
+    "x & x & x & x & x & x \\\\\n",
+    "x & x & x & x & x & x \\\\\n",
+    "x & x & x & x & x & x \n",
+    "}}^Q \\;\\;\n",
     "\\overbrace{\\pmatrix{\n",
-    "* & * & * & * & * & * \\\\  \n",
-    "* & * & * & * & * & * \\\\  \n",
-    "* & * & * & * & * & * \\\\  \n",
-    "* & * & * & * & * & * \\\\  \n",
-    "* & * & * & * & * & * \\\\\n",
-    "* & * & * & * & * & *\n",
-    "}}^Q \n",
-    "\\;\\;\n",
-    "\\overbrace{\\pmatrix{\n",
-    "* & * & * & *\\\\ \n",
-    "0 & * & * & *\\\\ \n",
-    "0 & 0 & * & * \\\\\n",
-    "0 & 0 & 0 & * \\\\\n",
+    "x & x & x & x \\\\ \n",
+    "0 & x & x & x \\\\ \n",
+    "0 & 0 & x & x \\\\\n",
+    "0 & 0 & 0 & x \\\\\n",
     "0 & 0 & 0 & 0 \\\\\n",
     "0 & 0 & 0 & 0\n",
     "}}^R$$\n",
@@ -768,7 +749,7 @@
     "\n",
     "<center><img src = \"img/householder.png\" height=300 width=300></center>\n",
     "\n",
-    "* It is obvious that: $\\bs{\\hat u}$ must be in the direction of $\\bs u = \\frac{1}{2}\\left(\\bs x - \\Vert \\bs x \\Vert_2 \\hat{\\bs e}_1\\right)$."
+    "* It is obvious that: $\\bs{\\hat u}$ must be in the direction of $\\bs u = \\bs x - \\Vert \\bs x \\Vert_2 \\hat{\\bs e}_1$."
    ]
   },
   {
@@ -992,8 +973,8 @@
     "\\end{pmatrix} \n",
     "\\begin{pmatrix}\n",
     "\\beta_1 \\\\ \\beta_2 \\\\ \\vdots \\\\ \\beta_n\n",
-    "\\end{pmatrix}\n",
-    "- \\begin{pmatrix}\n",
+    "\\end{pmatrix} -\n",
+    "\\begin{pmatrix}\n",
     "y'_1 \\\\ y'_2 \\\\ \\vdots \\\\ y'_n \\\\ \\hline y'_{n+1} \\\\ \\vdots \\\\ y'_m\n",
     "\\end{pmatrix}\n",
     "$$\n",
@@ -1073,9 +1054,7 @@
     }
    },
    "source": [
-    "## Principal component\n",
-    "\n",
-    "The principal component (PC):\n",
+    "## Principal component (PC)\n",
     "\n",
     "* Suppose $\\tilde {\\bs r}$ is a random vector, with expectation $\\bar{\\bs r} = \\mathbb{E}[\\tilde{\\bs r}]$ and covariance matrix $ V = \\mathbb{E}[(\\bt r - \\bar{\\bs r})(\\bt r - \\bar{\\bs r})^T] $\n",
     "  * e.g.: returns of a set of equity names\n",
@@ -1507,7 +1486,7 @@
     "$$\\renewcommand{Sigma}{\\mathcal{S}} d \\bs x = \\bs u dt + A \\Sigma d \\bs w, \\;\\;\\; d\\bs w d\\bs w^T = C dt$$\n",
     "\n",
     "* $\\Sigma$ is a diagonal matrix of $\\sigma_i$ \n",
-    "* $C$ is the correlation matrix of $d \\bs w$, its covariance matrix $V = \\Sigma C \\Sigma$.\n",
+    "* $C$ is the correlation matrix of $\\Sigma d \\bs w$, its covariance matrix $V = \\Sigma C \\Sigma$.\n",
     "\n",
     "Recall Cholesky decomposition $V = LL^T$: $\\Sigma \\delta \\bs w = L \\bt z \\sqrt{\\delta t}$: \n",
     "\n",
@@ -2018,13 +1997,13 @@
    "source": [
     "## Definition\n",
     "\n",
-    "For any real matrix $M$, $\\sigma > 0$ is a singular value if there exists two vectors $\\bs {u, v}$ such that:\n",
+    "For any real matrix $M$, $\\sigma \\geq 0$ is a singular value if there exists two $\\bf\\mbox{unit-length}$ ectors $\\bs {u, v}$ such that:\n",
     "\n",
     "1. $M \\bs v = \\sigma \\bs u$ \n",
-    "2. $M^T \\bs u = \\sigma \\bs v$\n",
+    "2. $\\bs u^T M = \\sigma \\bs v^T$\n",
     "\n",
     "$\\bs {u, v}$ are called left and right singular vector of $M$.\n",
-    "* unlike eigenvalues, singular values are always positive.\n",
+    "* unlike eigenvalues, singular values are always non-negative.\n",
     "\n",
     "By convention, \n",
     "* we represent singular vectors as unit L-2 vectors, i.e., $\\bs u^T\\bs u = \\bs v^T \\bs v = 1$,\n",
@@ -2076,7 +2055,7 @@
     "\n",
     "$$ (M \\bs x)^T \\bs u_1 = \\bs x^T M^T \\bs u_1 = \\bs x^T \\sigma_1 \\bs v_1  = 0 $$\n",
     "\n",
-    "Therefore, if we only consider those $\\bs u^T \\bs u_1^ = 0$, the corresponding $\\bs v$ must be orthogonal to $\\bs v_1$ :\n",
+    "Therefore, if we only consider those $\\bs u^T M^T \\bs u_1 = 0$ ($M$-orthogonal), the corresponding $\\bs v$ must be orthogonal to $\\bs v_1$ :\n",
     "\n",
     "* $\\bs {u_2, v_2}$ maximizes $\\bs u^T M \\bs v$  among those $(\\bs u, \\bs v)$ orthogonal to $\\bs u_1, \\bs v_1$\n",
     "* this process can repeat for all singular vectors (assuming singular values are distinct)"
@@ -2367,7 +2346,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
