--- a/Lecture3.ipynb
+++ b/Lecture3.ipynb
@@ -341,7 +341,7 @@
     }
    },
    "source": [
-    "## Properties of eigen value/vector\n",
+    "## Properties of eigenvalues\n",
     "For matrix $A$ of size $n \\times n$:\n",
     "* there can be $n$ distinct eigenvalues at most\n",
     "* eigenvalues can be negative or complex\n",
@@ -349,35 +349,7 @@
     "* $\\sum_i\\lambda_i = \\text{tr}(A)$\n",
     "\n",
     "It is difficult to solve the characteristic function for $\\lambda_i$, especially for large $n$.\n",
-    "* But once we have eigenvalues, it is easy to find corresponding eigenvectors.\n",
-    "\n",
-    "Eigenvectors are usually specified as unit L2 vectors of $\\Vert \\bs v \\Vert_2^2 = \\bs v^T \\bs v = 1$. \n",
-    "  * $\\bs v$ and $- \\bs v$ are equivalent unit eigenvectors"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "## Independence of eigenvectors\n",
-    "\n",
-    "Eigen vectors of distinct eigen values are linearly independent.\n",
-    "\n",
-    "* proof: suppose the first k-1 eigen vectors are independent, but not the k-th:\n",
-    "  \n",
-    "$$\\begin{array} \\\\\n",
-    "   \\bs{v_k} &= \\sum_{i=1}^{k-1}c_i\\bs{v_i} \\\\\n",
-    "   \\lambda_k \\bs{v_k} &= \\sum_{i=1}^{k-1}c_i\\lambda_i\\bs{v_i} =  \\lambda_k \\sum_{i=1}^{k-1}c_i\\bs{v_i} \\\\\n",
-    "\\bs 0  &= \\sum_{i=1}^{k-1}c_i(\\lambda_i - \\lambda_k) \\bs{v_i} \n",
-    "   \\end{array}\n",
-    "   $$\n",
-    "   \n",
-    "   this leads to contradiction.\n",
-    "* If $A$ has $n$ distinct eigenvalues, then all the eigen vectors form a basis for the vector space."
+    "* But once we have eigenvalues, it is easy to find corresponding eigenvectors."
    ]
   },
   {
@@ -389,15 +361,41 @@
    },
    "source": [
     "## Properties of eigenvectors\n",
+    "Eigenvectors are usually specified as unit L2 vectors of $\\Vert \\bs v \\Vert_2^2 = \\bs v^T \\bs v = 1$. \n",
+    "  * $\\bs v$ and $- \\bs v$ are equivalent unit eigenvectors\n",
+    "  \n",
+    "Eigen vectors of distinct eigenvalues are linearly independent.\n",
     "\n",
-    "If $A$ has $n$ distinct eigen values, we can write:\n",
+    "* proof: suppose the first k-1 eigenvectors are independent, but not the k-th:\n",
+    "  \n",
+    "$$\n",
+    "\\begin{array} \\\\\n",
+    "   \\bs{v_k} &= \\sum_{i=1}^{k-1}c_i\\bs{v_i} \\\\\n",
+    "   \\lambda_k \\bs{v_k} &= \\sum_{i=1}^{k-1}c_i\\lambda_i\\bs{v_i} =  \\lambda_k \\sum_{i=1}^{k-1}c_i\\bs{v_i} \\\\\n",
+    "\\bs 0  &= \\sum_{i=1}^{k-1}c_i(\\lambda_i - \\lambda_k) \\bs{v_i} \n",
+    "\\end{array}\n",
+    "$$\n",
+    "   \n",
+    "   this leads to contradiction."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "\n",
+    "If $A$ has $n$ distinct eigenvalues, then all the eigenvectors form a basis for the vector space and we can write:\n",
     "\n",
     "$$ A R = R \\Lambda$$\n",
     "\n",
-    "* where each column of $R$ is a eigenvector, and $\\Lambda$ is a diagonal matrix of eigenvalues\n",
+    "* where each column of $R$ is an eigenvector, and $\\Lambda$ is a diagonal matrix of eigenvalues\n",
     "\n",
     "\n",
-    "$R$ is invertible because eigen vectors are all independent:\n",
+    "$R$ is invertible because eigenvectors are all independent:\n",
     "\n",
     "$$\\begin{array} \\\\\n",
     "R^{-1} A &= \\Lambda R^{-1} \\\\\n",
@@ -421,12 +419,12 @@
     "If $A$ is real and symmetric: $A^* = A$:\n",
     "\n",
     "* $\\Lambda^* = \\Lambda$: all eigenvalues are real\n",
-    "* we can consider real eigen vectors only without losing generality\n",
+    "* we can consider real eigenvectors only without losing generality\n",
     "* $R$ is orthogonal: $(R^{-1})^* = (R^{-1})^T = R \\iff RR^T = I$\n",
     "\n",
     "$A =  R\\Lambda R^T$, this diagonalization is called the eigenvalue decomposition (EVD)\n",
     "* all eigenvalues are positive if and only if $A$ is SPD\n",
-    "* applies even when there are duplicated eigen values. "
+    "* applies even when there are duplicated eigenvalues. "
    ]
   },
   {
@@ -466,7 +464,7 @@
     "\n",
     "* $\\bs v_2$ maximizes $\\bs u^T A \\bs u$ for all unit $\\bs u$ that is orthogonal to $\\bs v_1$, i.e, $\\bs u^T \\bs v_1 = 0$.\n",
     "* $\\bs v_i$ maximizes amongst those unit $\\bs u$ that are orthogonal to $\\bs v_1, ..., \\bs v_{i-1}$\n",
-    "* In the case of duplicated eigen values, $\\bs v_i$ is not unique, we can pick any $\\bs v_i$ and continue."
+    "* In the case of duplicated eigenvalues, $\\bs v_i$ is not unique, we can pick any $\\bs v_i$ and continue."
    ]
   },
   {
@@ -498,14 +496,14 @@
    "source": [
     "## Solving eigenvalues\n",
     "\n",
-    "It is very challenging to solve eigen values for large matrices.\n",
+    "It is very challenging to solve eigenvalues for large matrices.\n",
     "* Solving characteristic equation is not numerically feasible.\n",
     "* QR algorithm is an important breakthrough in numerical analysis.\n",
     "\n",
-    "The basic idea of solving eigen values of matrix $A$:\n",
+    "The basic idea of solving eigenvalues of matrix $A$:\n",
     "* Find a similarity transformation $B = PAP^{-1}$ so that $B$ is a triangular matrix\n",
     "* $A$ and $B$ has identical eigenvalues\n",
-    "* Eigen values of the triangular matrix $B$ are simply its diagonal elements."
+    "* Eigenvalues of the triangular matrix $B$ are simply its diagonal elements."
    ]
   },
   {
