Lecture6 minor updates

--- a/Lecture6.ipynb
+++ b/Lecture6.ipynb
@@ -214,11 +214,11 @@
    "source": [
     "## Sample mean\n",
     "\n",
-    "$\\hat{u}$ is the mean of the samples:\n",
+    "$\\hat{\\mu}$ is the mean of the samples:\n",
     "\n",
     "$$\\hat{\\mu} = \\frac{1}{n}\\sum_{i=1}^n r_i = \\frac{1}{n} \\bs 1^T \\bs r$$\n",
     "\n",
-    "$\\hat u$ is an unbiased estimator of the population mean $\\mu$: \n",
+    "$\\hat \\mu$ is an unbiased estimator of the population mean $\\mu$: \n",
     "\n",
     "$$\\mathbb{E}[\\hat{\\mu}] = \\frac{1}{n} \\bs 1^T \\bs 1 \\mu  = \\mu $$\n",
     "\n",
@@ -249,7 +249,7 @@
     "$$\n",
     "\\begin{array}\n",
     "\\\\ \\mathbb{E}[\\hat{\\sigma}^2] &= \\mathbb{E}\\left[\\frac{1}{n}\\left(\\bs r^T \\bs r - 2 \\bs r^T \\bs 1 \\hat \\mu + \\bs 1^T \\bs 1 \\hat \\mu^2\\right)\\right] = \\mathbb{E}\\left[\\frac{1}{n}\\bs r^T \\bs r - \\hat \\mu^2\\right] \\\\\n",
-    "&= \\mathbb{E}[\\tilde r^2] - \\mathbb{E} [\\hat u^2] = (\\sigma^2 + \\mu^2) - (\\frac{\\sigma^2}{n} + \\mu^2) = \\frac{n-1}{n} \\sigma^2\n",
+    "&= \\mathbb{E}[\\tilde r^2] - \\mathbb{E} [\\hat \\mu^2] = (\\sigma^2 + \\mu^2) - (\\frac{\\sigma^2}{n} + \\mu^2) = \\frac{n-1}{n} \\sigma^2\n",
     "\\end{array}\n",
     "$$\n",
     "\n",
@@ -477,8 +477,8 @@
     "Let's revisit the estimation of stock return's mean and volatility, suppose:\n",
     "\n",
     "* we have 10Y daily return data, $r_i$\n",
-    "* the true volatility is 25% annualized, ie, $\\sigma = .25$\n",
-    "* the returns are roughly normal, i.e,. $\\beta = 3$\n",
+    "* the true volatility is 25% annualized, i.e. $\\sigma = .25$\n",
+    "* the returns are roughly normal, i.e. $\\beta = 3$\n",
     "\n",
     "The historical mean estimator $\\hat u = \\frac{1}{n}\\sum_i r_i $ has an error of:\n",
     "* $\\std(\\hat \\mu) = \\frac{\\sigma}{\\sqrt{10}} = 0.079$, the error is large because we only have 10 independent sample\n",
@@ -2476,7 +2476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
